<resources>
    <string name="app_name">Euphoric</string>
    <string name="title_activity_recommendation">RecommendationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_recommendation_controller">RecommendationControllerActivity
    </string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="detectingMood">Detecting mood…</string>
    <string name="fetchingSongs">"Fetching songs for you…"</string>
    <string name="no_tracks">No tracks found for the given filters\nPlease try using something else</string>
    <string name="no_liked_songs">You haven\'t liked any songs yet</string>
    <string name="no_recommendation">Seems you haven\'t liked any songs yet\nPlease consider liking some songs and let us do the rest</string>

    <!--    messages for waiting while detecting mood-->
    <string-array name="waitTexts">
        <item>Good things take time</item>
        <item>Patience is a virtue</item>
        <item>Rivers know this: there is no hurry</item>
        <item>You usually have to wait for that which is worth waiting for</item>
        <item>Hang on. We\'re just there</item>
        <item>Waiting for the spark from heaven to fall</item>
        <item>Patience is bitter, but its fruit is sweet</item>
        <item>Almost there</item>
    </string-array>

    <!-- languages for dropdown box -->
    <string-array name="languages">
        <item>No Preference</item>
        <item>Arabic</item>
        <item>Assamese</item>
        <item>Bangla</item>
        <item>Bengali</item>
        <item>Bhojpuri</item>
        <item>Chinese</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Gujarati</item>
        <item>Hindi</item>
        <item>Japanese</item>
        <item>Kannada</item>
        <item>Kashmiri</item>
        <item>Korean</item>
        <item>Malayalam</item>
        <item>Manipuri</item>
        <item>Marathi</item>
        <item>Nepali</item>
        <item>Oriya</item>
        <item>Pahari</item>
        <item>Punjabi</item>
        <item>Rajasthani</item>
        <item>Sindhi</item>
        <item>Spanish</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Urdu</item>
    </string-array>

    <!--    spotify related constants    -->
    <string name="CLIENT_ID">18fc031bc8954e259f1f178449f209f8</string>
    <string name="REDIRECT_URI">com.example.euphoric://callback</string>
    <string name="shared_pref_key">Spotify</string>
</resources>