<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:drawableLeft = "@drawable/name"
        android:gravity="center_vertical"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

<!--    <View-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="1px"-->
<!--        android:background="@color/white_greyish" />-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userEmailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:drawableLeft = "@drawable/email"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

<!--    <View-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="1px"-->
<!--        android:background="@color/white_greyish" />-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/mobileNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:drawableLeft = "@drawable/phone"
        android:gravity="center_vertical"
        android:hint="@string/mobileNumber"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

<!--    <View-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="1px"-->
<!--        android:background="@color/white_greyish" />-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:drawableLeft = "@drawable/lock"
        android:gravity="center_vertical"
        android:hint="@string/passowrd"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

<!--    <View-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="1px"-->
<!--        android:background="@color/white_greyish" />-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:drawableLeft = "@drawable/key"
        android:gravity="center_vertical"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button"
        android:padding="3dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="SignUp">SignUp</Button>

    <Button
        android:id="@+id/redirectLoginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button"
        android:padding="3dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="Already have an account? Log In">SignIn</Button>

</LinearLayout>