<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <ImageView
        android:id="@+id/up_logo"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/homescreen_logo_only" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/up_fullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/name"
        android:drawablePadding="8dp"
        android:fontFamily="@font/arvo"
        android:gravity="center_vertical"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/lavender"
        android:textColorHint="@color/light_lavender"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/up_emailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:fontFamily="@font/arvo"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="none"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/lavender"
        android:textColorHint="@color/light_lavender"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/up_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="8dp"
        android:fontFamily="@font/arvo"
        android:gravity="center_vertical"
        android:hint="@string/mobileNumber"
        android:inputType="none"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/lavender"
        android:textColorHint="@color/light_lavender"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/up_dob"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/calender"
        android:drawablePadding="8dp"
        android:fontFamily="@font/arvo"
        android:gravity="center_vertical"
        android:hint="Date of Birth"
        android:inputType="none"
        android:minHeight="48dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/lavender"
        android:textColorHint="@color/light_lavender"
        android:textSize="16sp" />

    <Button
        android:id="@+id/up_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/home_card"
        android:fontFamily="@font/cabin"
        android:padding="3dp"
        android:text="Update profile"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold">SignIn
    </Button>

</LinearLayout>